--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
   <title>roadster</title>
   <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
-  <link rel="stylesheet" href="./src/assets/css/common.less">
 </head>
 
 
 
-<body>
+<body >
 
   <div id="app"></div>
-  <script src="/dist/build.js"></script>
+  <script src="./dist/build.js"></script>
 
 </body>
 
