--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
 
 
-<body >
+<body>
 
   <div id="app"></div>
   <script src="./dist/build.js"></script>
+  <script>
 
+  </script>
 </body>
 
 </html>
